@@ -7,6 +7,8 @@
   o  changed dependencies: droped mboost (as it depends on many other packages)
      and added modeltools instead
 
+  o  improved plot.cfboost (for time-varying effects)
+
   o  TODO: change integration
 
 
